--- a/src/kaizen/DailyLearnings.fxml
+++ b/src/kaizen/DailyLearnings.fxml
@@ -16,10 +16,10 @@
          <center>
             <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                <children>
-                  <ToggleButton mnemonicParsing="false" prefHeight="75.0" prefWidth="325.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="KANBAN BOARD" />
-                  <ToggleButton mnemonicParsing="false" prefHeight="75.0" prefWidth="325.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="DEEP FOCUS" />
-                  <ToggleButton mnemonicParsing="false" prefHeight="75.0" prefWidth="325.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="TASK TRACKER" />
-                  <ToggleButton mnemonicParsing="false" prefHeight="75.0" prefWidth="325.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="TIME DASHBOARD" />
+                  <ToggleButton fx:id="kbBoard" mnemonicParsing="false" onAction="#handleKbBoard" prefHeight="75.0" prefWidth="325.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="KANBAN BOARD" />
+                  <ToggleButton fx:id="deepFocus" mnemonicParsing="false" onAction="#handleDeepFocus" prefHeight="75.0" prefWidth="325.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="DEEP FOCUS" />
+                  <ToggleButton fx:id="taskTracker" mnemonicParsing="false" onAction="#handleTaskTracker" prefHeight="75.0" prefWidth="325.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="TASK TRACKER" />
+                  <ToggleButton fx:id="timeDashboard" mnemonicParsing="false" onAction="#handleTimeSheets" prefHeight="75.0" prefWidth="325.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="TIME DASHBOARD" />
                   <ToggleButton mnemonicParsing="false" prefHeight="75.0" prefWidth="325.0" styleClass="current-menu-toggle" stylesheets="@stylesheet.css" text="DAILY LEARNINGS" />
                </children>
                <opaqueInsets>
@@ -33,9 +33,9 @@
          <bottom>
             <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                <children>
-                  <ToggleButton mnemonicParsing="false" prefHeight="75.0" prefWidth="325.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="ABOUT" />
-                  <ToggleButton layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="325.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="SETTINGS" />
-                  <Button mnemonicParsing="false" prefHeight="75.0" prefWidth="325.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="SIGN OUT" />
+                  <ToggleButton fx:id="about" mnemonicParsing="false" onAction="#handleAboutScreen" prefHeight="75.0" prefWidth="325.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="ABOUT" />
+                  <ToggleButton fx:id="settings" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#handleSettings" prefHeight="75.0" prefWidth="325.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="SETTINGS" />
+                  <Button fx:id="signOut" mnemonicParsing="false" onAction="#handleSignOut" prefHeight="75.0" prefWidth="325.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="SIGN OUT" />
                </children></VBox>
          </bottom>
          <top>
@@ -48,6 +48,91 @@
       </BorderPane>
    </left>
    <right>
-      <BorderPane prefHeight="200.0" prefWidth="1595.0" BorderPane.alignment="CENTER" />
+      <BorderPane prefHeight="200.0" prefWidth="1595.0" BorderPane.alignment="CENTER">
+         <left>
+            <GridPane prefHeight="1059.0" prefWidth="984.0" BorderPane.alignment="CENTER">
+              <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="636.6666870117188" minWidth="10.0" prefWidth="50.66668701171875" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="852.6666564941406" minWidth="10.0" prefWidth="746.333251953125" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="364.3333740234375" minWidth="10.0" prefWidth="162.666748046875" />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints maxHeight="283.33332347869873" minHeight="10.0" prefHeight="150.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="283.33332347869873" minHeight="10.0" prefHeight="150.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="489.33331298828125" minHeight="0.0" prefHeight="84.33334350585938" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="752.0" minHeight="0.0" prefHeight="57.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="752.0" minHeight="0.0" prefHeight="30.666656494140625" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="669.3333435058594" minHeight="0.0" prefHeight="61.6666259765625" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="669.3333435058594" minHeight="10.0" prefHeight="49.33331298828125" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="669.3333435058594" minHeight="10.0" prefHeight="395.33331298828125" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="687.3333740234375" minHeight="0.0" prefHeight="111.66668701171875" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Your daily learnings" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="Arial" size="48.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets left="40.0" />
+                     </GridPane.margin>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="What did you learn today?" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <GridPane.margin>
+                        <Insets left="40.0" />
+                     </GridPane.margin>
+                     <font>
+                        <Font size="36.0" />
+                     </font>
+                  </Text>
+                  <ComboBox fx:id="answerOne" prefHeight="31.0" prefWidth="515.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                     <GridPane.margin>
+                        <Insets left="40.0" />
+                     </GridPane.margin>
+                  </ComboBox>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="What could you have done better today?" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                     <font>
+                        <Font size="36.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets left="40.0" />
+                     </GridPane.margin>
+                  </Text>
+                  <ComboBox fx:id="answerTwo" prefHeight="31.0" prefWidth="515.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+                     <GridPane.margin>
+                        <Insets left="40.0" />
+                     </GridPane.margin>
+                  </ComboBox>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date of learnings" GridPane.columnIndex="1" GridPane.rowIndex="7">
+                     <font>
+                        <Font size="36.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets left="40.0" top="-300.0" />
+                     </GridPane.margin>
+                  </Text>
+                  <DatePicker GridPane.columnIndex="1" GridPane.rowIndex="7">
+                     <GridPane.margin>
+                        <Insets left="40.0" top="-175.0" />
+                     </GridPane.margin>
+                  </DatePicker>
+                  <Label fx:id="confirmEntry" text="Successfully updated learnings!" GridPane.columnIndex="1" GridPane.rowIndex="7">
+                     <GridPane.margin>
+                        <Insets bottom="-200.0" left="100.0" />
+                     </GridPane.margin>
+                     <font>
+                        <Font size="36.0" />
+                     </font>
+                  </Label>
+                  <Button fx:id="addLearnings" mnemonicParsing="false" onAction="#updateAnswers" text="Add learnings" GridPane.columnIndex="2" GridPane.rowIndex="7">
+                     <GridPane.margin>
+                        <Insets left="30.0" />
+                     </GridPane.margin>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+               </children>
+            </GridPane>
+         </left></BorderPane>
    </right>
 </BorderPane>
