--- a/src/kaizen/PopUpLearnings.fxml
+++ b/src/kaizen/PopUpLearnings.fxml
@@ -43,7 +43,6 @@
             <GridPane GridPane.rowIndex="1">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
@@ -51,22 +50,17 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="add" mnemonicParsing="false" onAction="#handleAdd" prefHeight="35.0" prefWidth="119.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Add Entry">
+                  <Button fx:id="delete" mnemonicParsing="false" onAction="#handleDelete" prefHeight="35.0" prefWidth="119.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Delete Entry">
                      <GridPane.margin>
                         <Insets left="50.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="delete" mnemonicParsing="false" onAction="#handleDelete" prefHeight="35.0" prefWidth="119.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Delete Entry" GridPane.columnIndex="1">
-                     <GridPane.margin>
-                        <Insets left="50.0" />
-                     </GridPane.margin>
-                  </Button>
-                  <Button fx:id="edit" mnemonicParsing="false" onAction="#handleSelect" prefHeight="35.0" prefWidth="127.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Select Entry" GridPane.columnIndex="2">
+                  <Button fx:id="edit" mnemonicParsing="false" onAction="#handleSelect" prefHeight="35.0" prefWidth="127.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Select Entry" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="40.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="refresh" mnemonicParsing="false" onAction="#handleRefresh" prefHeight="35.0" prefWidth="119.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Refresh" GridPane.columnIndex="3">
+                  <Button fx:id="refresh" mnemonicParsing="false" onAction="#handleRefresh" prefHeight="35.0" prefWidth="119.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Refresh" GridPane.columnIndex="2">
                      <GridPane.margin>
                         <Insets left="30.0" />
                      </GridPane.margin>
@@ -88,7 +82,7 @@
                   <RowConstraints maxHeight="543.0" minHeight="10.0" prefHeight="282.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label styleClass="small-label" stylesheets="@stylesheet.css" text="Select entry to edit" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <Label styleClass="small-label" stylesheets="@stylesheet.css" text="Select an entry to edit" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets left="55.0" />
                      </GridPane.margin>
@@ -117,13 +111,16 @@
                      </GridPane.margin>
                   </Button>
                   <Label fx:id="confirm" text="Successfully updated learnings!" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                  <TextField fx:id="idBox" editable="false" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="6">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <GridPane.margin>
+                        <Insets bottom="90.0" />
+                     </GridPane.margin>
+                  </TextField>
                </children>
             </GridPane>
-            <Button fx:id="back" mnemonicParsing="false" onAction="#handleBack" prefHeight="35.0" prefWidth="119.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Back" GridPane.rowIndex="3">
-               <GridPane.margin>
-                  <Insets left="50.0" />
-               </GridPane.margin>
-            </Button>
          </children>
       </GridPane>
    </children>
